--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,5 @@
 <div id="background">
-
-    <form id="login-form" class="centered-form" method="post">
+    <form class="centered-form" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="un" required>
 
@@ -8,6 +7,6 @@
         <input type="password" id="password" name="pw" required>
 
         <button type="Login">Login</button>
+        <a href="/register" id="register" class="download-button">Register</a>
     </form>
-
 </div>
