--- a/views/specific.handlebars
+++ b/views/specific.handlebars
@@ -1,5 +1,9 @@
 <div id="background">
+    {{#if dbError}}
+    <p>Sorry, there was an error with the database. Please try again later.</p>
+    {{else}}
     <h2>{{specificProject.title}}</h2>
     <h2>{{specificProject.year}}</h2>
     <p>{{specificProject.desc}}</p>
+    {{/if}}
 </div>
